--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -76,9 +76,9 @@
     "p2": "Desde ATOMICO3, te vamos a regalar un 5% del total de las compras de tus dos amigos de ATOMICOS (AT3 nuevos), directo a tu billetera. Es importante, que tus dos amigos hayan comprado los ATOMICOS (AT3 nuevos), dentro del plazo establecido.",
     "p3": " ¡Deslizá hacia abajo para saber más!",
     "p4": "¿Cómo acceder al beneficio?",
-    "p5": "Para poder acceder a este beneficio, los nuevos compradores de AT3 (nuevos), deberán navegar al ",
-    "inicio": "inicio",
-    "p6": " de la página y hacer clic en el botón de comprar token y seguir los pasos a continuación.",
+    "p5": "Para poder acceder a este beneficio, los nuevos compradores de AT3 (nuevos), deberán hacer ",
+    "click aqui": "click aquí",
+    "p5.1": " para poder iniciar el proceso de compra, y luego continuar con los pasos a continuación:",
     "p7": "Completar Formulario:",
     "p8": "Completar el formulario que les aparecerá en la app de atómico3, con todos sus datos de contacto",
     "p9": "Confirmación de datos",
