--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -214,7 +214,9 @@
   },
   "medios": {
     "medios": "Medios",
-    "m1": "Encuentro entre el Presidente de la Cámara Latinoamericana del Litio y el Secretario de Minería de Argentina: Un Diálogo entre Mundos Divergentes"
+    "por": "Por",
+    "m1": "Encuentro entre el Presidente de la Cámara Latinoamericana del Litio y el Secretario de Minería de Argentina",
+    "m2": "El precio del litio: una visión de mercado"
   },
   "team": {
     "nuestro equipo": "Nuestro Equipo",
