--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -776,5 +776,7 @@
         "p7": "support@Atómico3.io"
       }
     }
+  }, "faqForLaw": {
+    "faqForLaw": "Preguntas frecuentes para las fuerzas del orden"
   }
 }
