--- a/src/translations/es/faqForLaw.json
+++ b/src/translations/es/faqForLaw.json
@@ -11,6 +11,13 @@
             "title6": "¿Cómo pueden las fuerzas del orden solicitar información a Atomico3.io?",
             "title7": "¿Qué pasa si mi solicitud implica un riesgo inminente de muerte o lesiones corporales graves?",
             "title8": "Renuncia"
+        },
+        "documento": {
+            "informacion punto 1": {
+                "p1": "Atomico3 es una red descentralizada, que permite a sus participantes realizar transacciones de valor (en forma de AT3) peer-to-peer sin necesidad de un tercero. Para obtener más información sobre Atomico3, consulte nuestro Centro de aprendizaje.",
+                "p2": "Atomico3 es un sitio web informativo sobre Atomico3 y otros activos digitales. También proporcionamos software en forma de billetera digital, que permite a los usuarios recibir, almacenar y enviar varios activos digitales (la 'Billetera'). La Billetera es una billetera sin custodia. Una billetera sin custodia es un tipo de billetera de criptomonedas en la que el usuario tiene las claves privadas de sus fondos. Esto significa que el usuario tiene control total sobre sus fondos y puede acceder a ellos en cualquier momento. Por el contrario, una billetera de custodia es donde el proveedor de la billetera tiene las claves privadas de los fondos del usuario. Esto significa que el proveedor de la billetera tiene control sobre los fondos del usuario y puede acceder a ellos en cualquier momento.",
+                "p3": "La distinción entre billeteras con custodia y sin custodia es relevante para la aplicación de la ley porque el uso de billeteras sin custodia dificulta el seguimiento y la incautación de criptomonedas. Las fuerzas del orden no pueden simplemente solicitar las claves privadas del proveedor de la billetera. En su lugar, las fuerzas del orden tendrían que localizar al usuario y obtener las claves privadas del usuario."
+            }
         }
     }
 }
