--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -782,5 +782,8 @@
   },
   "faqForLaw": {
     "faqForLaw": "Faq for Law Enforcement"
+  },
+  "cookiesPolicy": {
+    "cookiesPolicy": "Cookies Policy"
   }
 }
