--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -778,5 +778,8 @@
     }
   }, "faqForLaw": {
     "faqForLaw": "Preguntas frecuentes para las fuerzas del orden"
+  },
+  "cookiesPolicy": {
+    "cookiesPolicy": "Política de Cookies"
   }
 }
